[XForms] Invalid functions attribute not caught. Bug 299170, patch by stpride, r=doronr+allan